--- a/Angular/src/app/autenticacion/recuperar/recuperar.component.html
+++ b/Angular/src/app/autenticacion/recuperar/recuperar.component.html
@@ -1,1 +1,22 @@
-<p>recuperar works!</p>
+
+<div class="fondo-gris">
+    <div class="contenido-izquierda">
+      <div class="titulo">
+        <h2>
+            <img src="assets\imgs\Novus.jpg" alt="Logo" class="imagen-titulo">
+          </h2>
+        <h2>¿Olvidó la contraseña?</h2>
+      </div>
+      <div class="linea-blanca"></div>
+      <div class="texto-bajo-linea">Recupera lo perdido, conectamos tu mundo disperso.</div>
+    </div>
+    <div class="rectangulo">
+        <h3 class="titulo-rectangulo">Recuperar</h3>
+        <input type="text" placeholder="Correo electrónico">
+        <input type="password" placeholder="Nueva contraseña">
+        <div class="botones">
+            <button type="button" class="boton-registrarme">Enviar</button>
+          </div>
+      </div>
+  </div>
+  
