--- a/Angular/src/app/autenticacion/registrarse/registrarse.component.html
+++ b/Angular/src/app/autenticacion/registrarse/registrarse.component.html
@@ -1,1 +1,25 @@
-<p>registrarse works!</p>
+<!-- fondo-gris.component.html -->
+<div class="fondo-gris">
+    <div class="contenido-izquierda">
+      <div class="titulo">
+        <h2>
+            <img src="assets\imgs\Novus.jpg" alt="Logo" class="imagen-titulo">
+          </h2>
+        <h2>Crear Cuenta</h2>
+      </div>
+      <div class="linea-blanca"></div>
+      <div class="texto-bajo-linea">Recupera lo perdido, conectamos tu mundo disperso.</div>
+    </div>
+    <div class="rectangulo">
+        <h3 class="titulo-rectangulo">Registro</h3>
+        <!-- Campos para ingresar información -->
+        <input type="text" placeholder="Nombre">
+        <input type="text" placeholder="Correo electrónico">
+        <input type="password" placeholder="Contraseña">
+        <div class="botones">
+            <button type="button" class="boton-registrarme">Registrarme</button>
+          </div>
+        <!-- Agrega más campos según sea necesario -->
+      </div>
+  </div>
+  
