Todas las pantallas de los mockups implementadas.

--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -1,1 +1,52 @@
-<p>eventos works!</p>
+<!-- fondo-gris.component.html -->
+<div class="fondo-gris">
+    <div class="header">
+        <img src="/assets/imgs/Novus.jpg" alt="Imagen Izquierda" class="imagen-izquierda">
+        <div class="user">
+            <h1>Administrador</h1>
+            <img src="/assets/imgs/user.jpg" alt="Imagen Derecha" class="imagen-derecha">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="izquierda">
+            <div class="rectangulo-gris">
+                <ul>
+                    <li class="Casa">Eventos</li>
+                    <li class="userAzul">Personal</li>
+                    <li class="archivos">Registro</li>
+                    <li class="informe">Reporte</li>
+                    <li class="pc">Gráficos</li>
+                </ul>
+            </div>
+        </div>
+        <div class="centro">
+            <h1>Eventos principales</h1>
+            <div class="rectangulos-container">
+                <!-- Rectángulo 1 -->
+                <div class="rectangulo">
+                    <img src="/assets/imgs/autofest.jpg" alt="Imagen 1">
+                    <div class="texto">
+                        <h3>Fecha: Del 16 noviembre al 19 noviembre 2023</h3>
+                        <p>Descripción: Autofest es una feria enfocada a los amantes de autos y motos, donde encontrarán una muestra comercial de vehículos, accesorios y productos relacionados con el sector automotriz...</p>
+                    </div>
+                </div>
+                <!-- Rectángulo 2 -->
+                <div class="rectangulo">
+                    <img src="/assets/imgs/salonauto.jpg" alt="Imagen 2">
+                    <div class="texto">
+                        <h3>Fecha: Del 3 noviembre al 13 noviembre 2023</h3>
+                        <p>Descripción: La feria es el espacio de reencuentro para el sector automotor de Colombia, donde los interesados en la adquisición de autos, motos, SUV vehículos utilitarios y de carga ligera, entre otros...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="derecha">
+            <h1>Gestión</h1>
+            <div class="linea-azul"></div>
+            <div class="botones-container">
+                <button class="boton-azul">Crear</button>
+                <button class="boton-azul">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
