--- a/Angular/src/app/personal/listar/listar.component.html
+++ b/Angular/src/app/personal/listar/listar.component.html
@@ -1,1 +1,77 @@
-<p>listar works!</p>
+<!-- fondo-gris.component.html -->
+<div class="fondo-gris">
+    <div class="header">
+        <img src="/assets/imgs/Novus.jpg" alt="Imagen Izquierda" class="imagen-izquierda">
+        <div class="user">
+            <h1>Personal 1</h1>
+            <img src="/assets/imgs/user.jpg" alt="Imagen Derecha" class="imagen-derecha">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="izquierda">
+            <div class="rectangulo-gris">
+                <ul>
+                    <li class="Casa">Inicio</li>
+                    <li class="userAzul">Pendiente</li>
+                    <li class="archivos">Recuperado</li>
+                    <li class="informe">Informe</li>
+                    <li class="pc">Estadísticas</li>
+                </ul>
+            </div>
+        </div>
+        <div class="centro">
+            <h1>Objetos pendientes</h1>
+            <div class="rectangulos-container">
+                <!-- Rectángulo 1 -->
+                <div class="rectangulo">
+                    <img src="/assets/imgs/apple.jpg" alt="Imagen 1">
+                    <div class="texto">
+                        <h3>Descripción: Teléfono celular marca Apple
+                        </h3>
+                        <p>Región: Área de degustación 01</p>
+                    </div>
+                </div>
+                <!-- Rectángulo 2 -->
+                <div class="rectangulo">
+                    <img src="/assets/imgs/samsung.jpg" alt="Imagen 2">
+                    <div class="texto">
+                        <h3>Descripción: Teléfono celular marca Samsung
+                        </h3>
+                        <p>Región: Baños sector 03</p>
+                    </div>
+                </div>
+                <!-- Agrega más rectángulos según sea necesario -->
+            </div>
+        </div>
+        <div class="derecha">
+            <h1>Filtros</h1>
+            <div class="linea-azul"></div>
+            <div class="checkbox-list">
+                <li>
+                    <label for="checkbox1">
+                        <input type="checkbox" id="checkbox1" name="checkbox1">
+                        <span>Ropa</span>
+                    </label>
+                </li>
+                <li>
+                    <label for="checkbox2">
+                        <input type="checkbox" id="checkbox2" name="checkbox2">
+                        <span>Documentos</span>
+                    </label>
+                </li>
+                <li>
+                    <label for="checkbox3">
+                        <input type="checkbox" id="checkbox3" name="checkbox3">
+                        <span>Carteras</span>
+                    </label>
+                </li>
+                <li>
+                    <label for="checkbox4">
+                        <input type="checkbox" id="checkbox4" name="checkbox4">
+                        <span>Teléfonos</span>
+                    </label>
+                </li>
+            </div>
+        </div>
+    </div>
+</div>
