Se agregaron pantallas de inicio para usuario y personal, se agregó la simulacion de logout con un boton de SALIR en los  3 perfiles.

--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -16,6 +16,7 @@
                     <li class="archivos">Registro</li>
                     <li class="informe">Reporte</li>
                     <li class="pc">Gráficos</li>
+                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR</a></li>
                 </ul>
             </div>
         </div>
