--- a/Angular/src/app/personal/listar/listar.component.html
+++ b/Angular/src/app/personal/listar/listar.component.html
@@ -11,11 +11,12 @@
         <div class="izquierda">
             <div class="rectangulo-gris">
                 <ul>
-                    <li class="Casa">Inicio</li>
+                    <li class="Casa"><a href="/personalin" class="userAzul">Inicio</a></li>
                     <li class="userAzul">Pendiente</li>
                     <li class="archivos">Recuperado</li>
                     <li class="informe">Informe</li>
                     <li class="pc">Estadísticas</li>
+                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR</a></li>
                 </ul>
             </div>
         </div>
