--- a/Angular/src/app/usuario/notificar/notificar.component.html
+++ b/Angular/src/app/usuario/notificar/notificar.component.html
@@ -11,9 +11,10 @@
         <div class="izquierda">
             <div class="rectangulo-gris">
                 <ul>
-                    <li class="Casa">Inicio</li>
+                    <li class="Casa"><a href="/userin" class="userAzul">Inicio</a></li>
                     <li class="userBlanco">Solicitudes</li>
                     <li class="actual">Notificar</li>
+                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR</a></li>
                 </ul>
             </div>
         </div>
