--- a/Angular/src/app/personal/listar/listar.component.css
+++ b/Angular/src/app/personal/listar/listar.component.css
@@ -128,6 +128,12 @@
     padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+.fondo-gris .contenido .izquierda ul li a {
+    color: #9f9f8d;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
 
 .fondo-gris .contenido .centro {
     text-align: left;
