--- a/Angular/src/app/usuario/iniciouser/iniciouser.component.css
+++ b/Angular/src/app/usuario/iniciouser/iniciouser.component.css
@@ -45,7 +45,7 @@
 }
 
 .fondo-gris .contenido .izquierda {
-    flex: 0.3;
+    flex: 0.4;
 }
 
 .fondo-gris .contenido .izquierda .rectangulo-gris {
@@ -71,7 +71,7 @@
     font-size:larger;
     
 }
-.fondo-gris .izquierda .rectangulo-gris ul li.archivos {
+.fondo-gris .izquierda .rectangulo-gris ul li.actual {
     height: 40px; /* Altura específica */
     width: 100px; /* Ancho específico */
     line-height: 40px; /* Alineación vertical del texto dentro del elemento */
@@ -82,7 +82,7 @@
     padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
-.fondo-gris .izquierda .rectangulo-gris ul li.userAzul {
+.fondo-gris .izquierda .rectangulo-gris ul li.userBlanco {
     height: 40px; /* Altura específica */
     width: 100px; /* Ancho específico */
     line-height: 40px; /* Alineación vertical del texto dentro del elemento */
@@ -106,28 +106,6 @@
     padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
-.fondo-gris .izquierda .rectangulo-gris ul li.informe {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/informe.jpg"); /* Ruta a tu imagen */
-    background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
-    background-size: 40px 40px;
-}
-.fondo-gris .izquierda .rectangulo-gris ul li.pc {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/pc.jpg"); /* Ruta a tu imagen */
-    background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
-    background-size: 40px 40px;
-}
 .fondo-gris .contenido .izquierda ul li a {
     color: #9f9f8d;
     font-family: 'Poppins', sans-serif;
@@ -135,77 +113,50 @@
     text-decoration: none;
 }
 
-.fondo-gris .contenido .centro {
+.fondo-gris .contenido .derecha {
     text-align: left;
     margin-left: 250px;
     font-family: 'Latina Bold', sans-serif;
     color:#1fd5fd;
 }
-
-.fondo-gris .contenido .centro .rectangulos-container {
+.fondo-gris .contenido .derecha form {
     display: flex;
     flex-direction: column;
 }
 
-.fondo-gris .contenido .centro .rectangulo {
-    border: 8px solid #1fd5fd;
-    border-radius: 5px;
+.fondo-gris .contenido .derecha form div {
     margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-    width: 600px;
-    height: 250px;
 }
 
-.fondo-gris .contenido .centro .rectangulo img {
-    width: 250px; /* Ajusta el ancho de la imagen según tu diseño */
-    height: 250px; /* Ajusta la altura de la imagen según tu diseño */
-    margin-right: 10px;
+.fondo-gris .contenido .derecha form label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #ffffff;
+    margin-bottom: 10px;
 }
 
-.fondo-gris .contenido .centro .rectangulos-container .rectangulo .texto {
-    flex: 1;
-    text-align: left;
+.fondo-gris .contenido .derecha form textarea,
+.fondo-gris .contenido .derecha form select,
+.fondo-gris .contenido .derecha form input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    background-color: #606366;
+    color: #ffffff;
 }
-
-.fondo-gris .contenido .centro .rectangulos-container .rectangulo h3,
-.fondo-gris .contenido .centro .rectangulo p {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    color: white;
-    margin-bottom: 30px;
-}
-.fondo-gris .contenido .centro .rectangulos-container .rectangulo p {
-    font-size: 20px;
-}
-
-  .fondo-gris .contenido .derecha{
-    flex: 0.5;
-    padding: 10px;
-    margin-left: 100px;
-    justify-content: center;
-    font-family: 'Latina Bold', sans-serif;
-    color:#1fd5fd;
+.fondo-gris .contenido .derecha form textarea::placeholder {
+    color: #b4adad; /* Cambia el color del texto de marcador de posición a blanco */
   }
-  .fondo-gris .contenido .derecha .linea-azul {
-    width: 70%;
-    height: 1px;
-    background-color: #1fd5fd;
-    margin-bottom: 20px;
-}
-.fondo-gris .contenido .derecha .botones-container {
-    display: flex;
-    margin-top: 10px; /* Ajusta el espacio entre la línea azul y los botones según sea necesario */
-}
 
-.fondo-gris .contenido .derecha .botones-container .boton-azul {
+  .fondo-gris .contenido .derecha form button {
     padding: 10px;
     margin-right: 10px;
     border: none;
     border-radius: 5px;
     background-color: #1fd5fd;
-    color: #ffffff;
+    color: #524e4e;
     font-size: 16px;
     cursor: pointer;
     font-weight: bold;
-}
+  }
