--- a/Angular/src/app/usuario/iniciouser/iniciouser.component.html
+++ b/Angular/src/app/usuario/iniciouser/iniciouser.component.html
@@ -19,7 +19,8 @@
             </div>
         </div>
         <div class="derecha">
-            <h1>Bienvenido!!</h1>
+            <h1>Bienvenido</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro distinctio fugiat expedita voluptas nam enim labore animi maxime, facere a laborum. Cumque sed quisquam aperiam blanditiis aut harum delectus, perferendis assumenda vel, amet quos nostrum rerum eos cum totam saepe eaque quibusdam architecto nemo aspernatur voluptas deserunt! Reiciendis molestiae quaerat necessitatibus quos ipsum porro, soluta distinctio tempore vitae quam hic voluptates at et, explicabo architecto incidunt nesciunt! Debitis aut rerum quidem ducimus mollitia? Animi, alias! Vero, quaerat blanditiis. Sint ipsam veniam debitis illo magni, non quod, illum a, eligendi consequuntur nostrum dolore nulla obcaecati. Porro quaerat quas quisquam. Illo velit impedit omnis doloribus, ea explicabo iure, quisquam labore quos recusandae facere eligendi? Repudiandae cumque neque harum quae nobis ratione blanditiis aliquam accusamus quia aut dignissimos repellendus dolorem, similique assumenda? Praesentium placeat possimus deserunt nihil facilis? Nihil perferendis eum minus velit, minima modi mollitia recusandae sed illo corrupti animi adipisci sunt delectus, excepturi cumque voluptatem veritatis architecto. Incidunt eveniet ab quibusdam est, porro nisi maxime perspiciatis deserunt minus quisquam placeat sequi, vero expedita non sint provident voluptate delectus consequuntur quaerat laboriosam fugit corporis, quam earum voluptatibus. Sit voluptatibus soluta modi, maiores eaque, quia quam illum eligendi tempora adipisci necessitatibus debitis fuga!</p>
         </div>
     </div>
 </div>
