--- a/Angular/src/app/autenticacion/iniciar-sesion/iniciar-sesion.component.html
+++ b/Angular/src/app/autenticacion/iniciar-sesion/iniciar-sesion.component.html
@@ -17,7 +17,7 @@
         <input type="email" id="correo-electronico" name="correo-electronico" placeholder="Correo electrónico" required>
         <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
         <div class="botones">
-            <button type="button" class="boton-enviar">Enviar</button>
+            <button type="button" class="boton-enviar" (click)="redirigirAInicio()">Enviar</button>
             <button type="button" class="boton-registrarme" (click)="redirigirARegistro()">Registrarme</button>
           </div>
         </form>
