--- a/Angular/src/app/usuario/notificar/notificar.component.html
+++ b/Angular/src/app/usuario/notificar/notificar.component.html
@@ -23,7 +23,7 @@
             <form>
                 <div>
                     <label for="descripcion">Descripción del objeto:</label>
-                    <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
+                    <textarea id="descripcion" name="descripcion" rows="4" required placeholder="Describa de manera completa el objeto perdido"></textarea>
                 </div>
                 <div>
                     <label for="categoria">Evento:</label>
