--- a/Angular/src/app/usuario/iniciouser/iniciouser.component.css
+++ b/Angular/src/app/usuario/iniciouser/iniciouser.component.css
@@ -12,14 +12,13 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 10%;
 }
 
 .fondo-gris .header .user {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 11%;
+    width: 15%;
 }
 
 .fondo-gris .header .user h1 {
@@ -46,7 +45,7 @@
 }
 
 .fondo-gris .contenido .izquierda {
-    flex: 0.5;
+    flex: 0.3;
 }
 
 .fondo-gris .contenido .izquierda .rectangulo-gris {
@@ -54,8 +53,8 @@
     /* Degradado de arriba hacia abajo */
     padding: 20px;
     border-radius: 10px;
-    height:95%;
-    width: 35%;
+    height:92%;
+    width: 100%;
     display: flex;
     justify-content: center; /* Centra la lista horizontalmente */
 }
@@ -72,7 +71,7 @@
     font-size:larger;
     
 }
-.fondo-gris .izquierda .rectangulo-gris ul li.actual {
+.fondo-gris .izquierda .rectangulo-gris ul li.archivos {
     height: 40px; /* Altura específica */
     width: 100px; /* Ancho específico */
     line-height: 40px; /* Alineación vertical del texto dentro del elemento */
@@ -83,8 +82,7 @@
     padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
-
-.fondo-gris .izquierda .rectangulo-gris ul li.userBlanco {
+.fondo-gris .izquierda .rectangulo-gris ul li.userAzul {
     height: 40px; /* Altura específica */
     width: 100px; /* Ancho específico */
     line-height: 40px; /* Alineación vertical del texto dentro del elemento */
@@ -95,10 +93,6 @@
     padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
-.fondo-gris .izquierda .rectangulo-gris ul li.userBlanco:hover {
-    color: #1fd5fd;
-}
-
 .fondo-gris .izquierda .rectangulo-gris ul li.Casa {
     color: #ffffff; /* Sobreescribe el color para el elemento con la clase "actual" */
     font-weight: bold;
@@ -112,70 +106,111 @@
     padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+.fondo-gris .izquierda .rectangulo-gris ul li.informe {
+    height: 40px; /* Altura específica */
+    width: 100px; /* Ancho específico */
+    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px; /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/informe.jpg"); /* Ruta a tu imagen */
+    background-repeat: no-repeat;
+    background-position: 20px left; /* Ajusta la posición según tu diseño */
+    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-size: 40px 40px;
+}
+.fondo-gris .izquierda .rectangulo-gris ul li.pc {
+    height: 40px; /* Altura específica */
+    width: 100px; /* Ancho específico */
+    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px; /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/pc.jpg"); /* Ruta a tu imagen */
+    background-repeat: no-repeat;
+    background-position: 20px left; /* Ajusta la posición según tu diseño */
+    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-size: 40px 40px;
+}
 .fondo-gris .contenido .izquierda ul li a {
     color: #9f9f8d;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 20px;
     text-decoration: none;
 }
-.salir{
-    padding-left: 35%;
-}
+
 .fondo-gris .contenido .izquierda ul li a:hover {
     color: #1fd5fd;
 }
 
-.fondo-gris .contenido .derecha {
-    /* text-align: left; */
-    /* margin-left: 250px; */
-    width: 33.3%;
+.fondo-gris .contenido .centro {
+    text-align: left;
+    margin-left: 250px;
     font-family: 'Latina Bold', sans-serif;
     color:#1fd5fd;
-    text-align: center;
+    width: 50%;
 }
 
-.derecha p{
-    color:#ffffff;
-}
-
-.fondo-gris .contenido .derecha form {
+.fondo-gris .contenido .centro .rectangulos-container {
     display: flex;
     flex-direction: column;
 }
 
-.fondo-gris .contenido .derecha form div {
+.fondo-gris .contenido .centro .rectangulo {
+    border: 8px solid #1fd5fd;
+    border-radius: 5px;
     margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    width: 600px;
+    height: 250px;
 }
 
-.fondo-gris .contenido .derecha form label {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #ffffff;
-    margin-bottom: 10px;
+.fondo-gris .contenido .centro .rectangulo img {
+    width: 250px; /* Ajusta el ancho de la imagen según tu diseño */
+    height: 250px; /* Ajusta la altura de la imagen según tu diseño */
+    margin-right: 10px;
 }
 
-.fondo-gris .contenido .derecha form textarea,
-.fondo-gris .contenido .derecha form select,
-.fondo-gris .contenido .derecha form input {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    border-radius: 20px;
-    background-color: #606366;
-    color: #ffffff;
+.fondo-gris .contenido .centro .rectangulos-container .rectangulo .texto {
+    flex: 1;
+    text-align: left;
 }
-.fondo-gris .contenido .derecha form textarea::placeholder {
-    color: #b4adad; /* Cambia el color del texto de marcador de posición a blanco */
+
+.fondo-gris .contenido .centro .rectangulos-container .rectangulo h3,
+.fondo-gris .contenido .centro .rectangulo p {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    color: white;
+    margin-bottom: 30px;
+}
+.fondo-gris .contenido .centro .rectangulos-container .rectangulo p {
+    font-size: 20px;
+}
+
+  .fondo-gris .contenido .derecha{
+    flex: 0.5;
+    padding: 10px;
+    margin-left: 100px;
+    justify-content: center;
+    font-family: 'Latina Bold', sans-serif;
+    color:#1fd5fd;
   }
+  .fondo-gris .contenido .derecha .linea-azul {
+    width: 70%;
+    height: 1px;
+    background-color: #1fd5fd;
+    margin-bottom: 20px;
+}
+.fondo-gris .contenido .derecha .botones-container {
+    display: flex;
+    margin-top: 10px; /* Ajusta el espacio entre la línea azul y los botones según sea necesario */
+}
 
-  .fondo-gris .contenido .derecha form button {
+.fondo-gris .contenido .derecha .botones-container .boton-azul {
     padding: 10px;
     margin-right: 10px;
     border: none;
     border-radius: 5px;
     background-color: #1fd5fd;
-    color: #524e4e;
+    color: #ffffff;
     font-size: 16px;
     cursor: pointer;
     font-weight: bold;
-  }
+}
