--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -42,6 +42,7 @@
             </div>
         </div>
         <div class="derecha">
+            <img src="/assets/imgs/calendar.png" alt="calendar" width="300px">
             <h1>Gestión</h1>
             <div class="linea-azul"></div>
             <div class="botones-container">
