--- a/Angular/src/app/personal/listar/listar.component.html
+++ b/Angular/src/app/personal/listar/listar.component.html
@@ -45,6 +45,7 @@
             </div>
         </div>
         <div class="derecha">
+            <img src="/assets/imgs/calendar.png" alt="calendar" width="300px">
             <h1>Filtros</h1>
             <div class="linea-azul"></div>
             <div class="checkbox-list">
