--- a/Angular/src/app/personal/listar/listar.component.css
+++ b/Angular/src/app/personal/listar/listar.component.css
@@ -144,6 +144,7 @@
     margin-left: 250px;
     font-family: 'Latina Bold', sans-serif;
     color:#1fd5fd;
+    width: 600px;
 }
 
 .fondo-gris .contenido .centro .rectangulos-container {
