--- a/Angular/src/app/personal/listar/listar.component.html
+++ b/Angular/src/app/personal/listar/listar.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="centro">
             <h1>Objetos pendientes</h1>
-            <div class="rectangulos-container">
+            <div class="rectangulos-container" >
                 <!-- Rectángulo 1 -->
                 <div class="rectangulo">
                     <img src="/assets/imgs/apple.jpg" alt="Imagen 1">
@@ -43,6 +43,9 @@
                 </div>
                 <!-- Agrega más rectángulos según sea necesario -->
             </div>
+            <div class="filter" *ngIf="filter">
+                <h1>No existen objetos pendientes para este filtro</h1>
+            </div>
         </div>
         <div class="derecha">
             <img src="/assets/imgs/calendar.png" alt="calendar" width="300px">
@@ -51,7 +54,7 @@
             <div class="checkbox-list">
                 <li>
                     <label for="checkbox1">
-                        <input type="checkbox" id="checkbox1" name="checkbox1">
+                        <input type="checkbox" id="checkbox1" name="checkbox1" che>
                         <span>Ropa</span>
                     </label>
                 </li>
@@ -69,7 +72,7 @@
                 </li>
                 <li>
                     <label for="checkbox4">
-                        <input type="checkbox" id="checkbox4" name="checkbox4">
+                        <input type="checkbox" checked id="checkbox4" name="checkbox4">
                         <span>Teléfonos</span>
                     </label>
                 </li>
