--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -13,9 +13,9 @@
                 <ul>
                     <li class="Casa">Eventos</li>
                     <li class="userAzul">Personal</li>
-                    <li class="archivos">Registro</li>
+                    <!-- <li class="archivos">Registro</li> -->
                     <li class="informe">Reporte</li>
-                    <li class="pc">Gráficos</li>
+                    <li class="pc">Estadísticas</li>
                     <li class="salir"><a href="/ingreso" class="userAzul">SALIR</a></li>
                 </ul>
             </div>
