--- a/Angular/src/app/personal/listar/listar.component.html
+++ b/Angular/src/app/personal/listar/listar.component.html
@@ -11,7 +11,7 @@
         <div class="izquierda">
             <div class="rectangulo-gris">
                 <ul>
-                    <li class="Casa"><a href="/personalin" class="userAzul">Inicio</a></li>
+                    <!-- <li class="Casa"><a href="/personalin" class="userAzul">Inicio</a></li> -->
                     <li class="userAzul">Pendiente</li>
                     <li class="archivos">Recuperado</li>
                     <li class="informe">Informe</li>
