--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -23,20 +23,14 @@
         <div class="centro">
             <h1>Eventos principales</h1>
             <div class="rectangulos-container">
-                <!-- Rectángulo 1 -->
-                <div class="rectangulo">
-                    <img src="/assets/imgs/autofest.jpg" alt="Imagen 1">
-                    <div class="texto">
-                        <h3>Fecha: Del 16 noviembre al 19 noviembre 2023</h3>
-                        <p>Descripción: Autofest es una feria enfocada a los amantes de autos y motos, donde encontrarán una muestra comercial de vehículos, accesorios y productos relacionados con el sector automotriz...</p>
-                    </div>
-                </div>
-                <!-- Rectángulo 2 -->
-                <div class="rectangulo">
-                    <img src="/assets/imgs/salonauto.jpg" alt="Imagen 2">
-                    <div class="texto">
-                        <h3>Fecha: Del 3 noviembre al 13 noviembre 2023</h3>
-                        <p>Descripción: La feria es el espacio de reencuentro para el sector automotor de Colombia, donde los interesados en la adquisición de autos, motos, SUV vehículos utilitarios y de carga ligera, entre otros...</p>
+                <div class="rectangulos-container scrollable">
+                    <!-- Utiliza *ngFor para iterar sobre la lista de objetosPerdidos -->
+                    <div class="rectangulo" *ngFor="let evento of eventos">
+                        <img [src]="'/assets/imgs/evento.jpg'" alt="Imagen del objeto">
+                        <div class="texto">
+                            <h3>{{ evento.fecha }}</h3>
+                            <p>Descripción: {{ evento.descripcion }}</p>
+                        </div>
                     </div>
                 </div>
             </div>
