--- a/Angular/src/app/personal/listar/listar.component.css
+++ b/Angular/src/app/personal/listar/listar.component.css
@@ -146,7 +146,10 @@
     color:#1fd5fd;
     width: 600px;
 }
-
+.scrollable {
+    max-height: 600px; /* Ajusta la altura máxima según tus necesidades */
+    overflow-y: auto; /* O también puedes usar overflow-y: scroll; */
+}
 .fondo-gris .contenido .centro .rectangulos-container {
     display: flex;
     flex-direction: column;
