--- a/Angular/src/app/usuario/notificar/notificar.component.html
+++ b/Angular/src/app/usuario/notificar/notificar.component.html
@@ -22,24 +22,21 @@
             <h1>Notificar Objeto</h1>
             <form>
                 <div>
-                    <label for="descripcion">Descripción del objeto:</label>
-                    <textarea id="descripcion" name="descripcion" rows="4" required placeholder="Describa de manera completa el objeto perdido"></textarea>
+                  <label for="descripcion">Descripción del objeto:</label>
+                  <textarea id="descripcion" name="descripcion" rows="4" required [(ngModel)]="nuevoObjeto.descripcion" placeholder="Describa de manera completa el objeto perdido"></textarea>
                 </div>
                 <div>
-                    <label for="categoria">Evento:</label>
-                    <select id="categoria" name="categoria" required>
-                        <option value="">Seleccione el evento</option>
-                        <option value="1">Evento 1</option>
-                        <option value="2">Evento 2</option>
-                        <option value="3">Evento 3</option>
-                    </select>
+                  <label for="categoria">Evento:</label>
+                  <select id="categoria" name="categoria" required [(ngModel)]="nuevoObjeto.evento.descripcion">
+                    <option *ngFor="let evento of eventos" [value]="evento">{{ evento }}</option>
+                  </select>
                 </div>
                 <div>
-                    <label for="descripcion">¿En que zona se perdió el objeto?</label>
-                    <textarea id="descripcion" name="descripcion" rows="4" required placeholder="Campo no obligatorio"></textarea>
+                  <label for="zona">¿En qué zona se perdió el objeto?</label>
+                  <textarea id="zona" name="zona" rows="4" [(ngModel)]="nuevoObjeto.zona" placeholder="Campo no obligatorio"></textarea>
                 </div>
-                <button type="submit">Enviar</button>
-            </form>
+                <button type="button" (click)="guardar()">Enviar</button>
+              </form>
         </div>
     </div>
 </div>
