--- a/Angular/src/app/autenticacion/registrarse/registrarse.component.html
+++ b/Angular/src/app/autenticacion/registrarse/registrarse.component.html
@@ -12,11 +12,23 @@
     </div>
     <div class="rectangulo">
         <h3 class="titulo-rectangulo">Registro</h3>
-        <input type="text" placeholder="Nombre">
-        <input type="text" placeholder="Correo electrónico">
-        <input type="password" placeholder="Contraseña">
+        <input type="text" [formControl]="name" id="name" class="form-control" placeholder="Nombre">
+        <div class="alert" role="alert" [hidden]="name.valid || !name.touched" >
+          <i class='bx bxs-error' style='color:#1fd5fd'  ></i>
+          Digite su nombre
+        </div>
+        <input type="email" [formControl]="email" id="email" class="form-control" placeholder="Correo electrónico">
+        <div class="alert" role="alert" [hidden]="email.valid || !email.touched" >
+          <i class='bx bxs-error' style='color:#1fd5fd'  ></i>
+          Digite un correo electrónico valido
+        </div>
+        <input type="password" [formControl]="password" id="password" class="form-control"placeholder="Contraseña">
+        <div class="alert" role="alert" [hidden]="password.valid || !password.touched" >
+          <i class='bx bxs-error' style='color:#1fd5fd'  ></i>
+          Digite una contraseña
+        </div>
         <div class="botones">
-            <button type="button" class="boton-registrarme">Registrarme</button>
+            <button type="button" class="boton-registrarme" [disabled]="email.invalid || password.invalid || name.invalid" (click)="redirigir()">Registrarme</button>
           </div>
       </div>
   </div>
