--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -28,7 +28,7 @@
                     <div class="rectangulo" *ngFor="let evento of eventos">
                         <img [src]="'/assets/imgs/evento.jpg'" alt="Imagen del objeto">
                         <div class="texto">
-                            <h3>{{ evento.fecha }}</h3>
+                            <h3>Fecha: {{ evento.fecha }}</h3>
                             <p>Descripción: {{ evento.descripcion }}</p>
                         </div>
                     </div>
