--- a/Angular/src/app/autenticacion/registrarse/registrarse.component.css
+++ b/Angular/src/app/autenticacion/registrarse/registrarse.component.css
@@ -5,7 +5,7 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    }
+}
 
 .contenido-izquierda {
     flex: 1;
@@ -30,8 +30,10 @@
 
 .imagen-titulo {
     margin-right: 10px;
-    width: 130px; /* Ajusta el tamaño de la imagen según tus preferencias */
-    height: auto; /* Para mantener la proporción original de la imagen */
+    width: 130px;
+    /* Ajusta el tamaño de la imagen según tus preferencias */
+    height: auto;
+    /* Para mantener la proporción original de la imagen */
 }
 
 .linea-blanca {
@@ -50,16 +52,20 @@
 .rectangulo {
     flex: 1.2;
     background-color: #606366;
-    height: 60%;
+    height: 70%;
     margin-right: 200px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centra los elementos horizontalmente */
-    justify-content: center; /* Centra los elementos verticalmente */
+    align-items: center;
+    /* Centra los elementos horizontalmente */
+    justify-content: center;
+    /* Centra los elementos verticalmente */
 }
+
 .titulo-rectangulo {
-    color: white; /* Color del texto dentro del rectángulo */
+    color: white;
+    /* Color del texto dentro del rectángulo */
     font-family: 'Latina Bold', sans-serif;
     font-size: 50px;
     margin-bottom: 20px;
@@ -77,16 +83,20 @@
     color: #ffffff;
     font-size: 20px;
 }
+
 .rectangulo input::placeholder {
-    color: #ffffff; /* Cambia el color del texto de marcador de posición a blanco */
+    color: #ffffff;
+    /* Cambia el color del texto de marcador de posición a blanco */
     font-size: 20px;
-  }
-  .rectangulo .botones {
+}
+
+.rectangulo .botones {
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
-  }
-  .rectangulo button {
+}
+
+.rectangulo button {
     flex: 1;
     padding: 10px;
     margin-right: 10px;
@@ -97,4 +107,24 @@
     font-size: 16px;
     cursor: pointer;
     font-weight: bold;
-  }
+}
+
+.alert {
+    padding: 0;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    color: #1fd5fd;
+    font-weight: 700;
+}
+
+.rectangulo button:hover {
+    border: 2px solid white;
+    /* border-radius: 20px; */
+    cursor: pointer;
+}
+
+.rectangulo button:disabled{
+    background-color: #999999;
+    border: none;
+    cursor: no-drop;
+}
